css/main.css
@charset "utf-8";
/* CSS Document */
/*c33a6e*/
@font-face
{
font-family: Interstate;
src:url(Interstate%20Black.ttf);
}
@font-face
{
font-family: Karnivore;
src:url(Karnivore-Lite/KARNIVOB.ttf);
}

body{
	margin:0;
	padding:0;
	overflow:hidden;
		background-color:#333;
		background-repeat:no-repeat;
	background-size:cover;
/*	background-image: linear-gradient(to bottom, rgba(51,51,51, 0.6), rgba(51,51,51, 0.6)), url("../images/main-background.jpg");
    background-image: -moz-linear-gradient(to bottom,rgba(51,51,51, 0.6), rgba(51,51,51, 0.6)), url("../images/main-background.jpg");
    background-image: -o-linear-gradient(to bottom, rgba(51,51,51, 0.6), rgba(51,51,51, 0.6)), url("../images/main-background.jpg");
    background-image: -ms-linear-gradient(to bottom, rgba(51,51,51, 0.6), rgba(51,51,51, 0.6)), url("../images/main-background.jpg");
    background-image: -webkit-gradient(linear, left top, left bottom, from(rgba(51,51,51, 0.8)), to(rgba(51,51,51, 0.8))), url("../images/main-background.jpg");
    background-image: -webkit-linear-gradient(to bottom, rgba(51,51,51, 0.6), rgba(51,51,51, 0.6)), url("../images/main-background.jpg");*/


}
#background{
		background: #7d7e7d; /* Old browsers */
background: -moz-radial-gradient(center, ellipse cover,  #7d7e7d 0%, #0e0e0e 100%); /* FF3.6+ */
background: -webkit-gradient(radial, center center, 0px, center center, 100%, color-stop(0%,#7d7e7d), color-stop(100%,#0e0e0e)); /* Chrome,Safari4+ */
background: -webkit-radial-gradient(center, ellipse cover,  #7d7e7d 0%,#0e0e0e 100%); /* Chrome10+,Safari5.1+ */
background: -o-radial-gradient(center, ellipse cover,  #7d7e7d 0%,#0e0e0e 100%); /* Opera 12+ */
background: -ms-radial-gradient(center, ellipse cover,  #7d7e7d 0%,#0e0e0e 100%); /* IE10+ */
background: radial-gradient(ellipse at center,  #7d7e7d 0%,#0e0e0e 100%); /* W3C */
filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#7d7e7d', endColorstr='#0e0e0e',GradientType=1 ); /* IE6-9 fallback on horizontal gradient */
position:fixed;
width:100%;
margin:0;
-webkit-transform:translateZ(-10000px);
}
.mother-wrapper{

	width:140%;
	position:absolute;
	left:-20%;

	transform-style:preserve-3d;
	-webkit-transform-style:preserve-3d;
	-moz-transform-style:preserve-3d;
	-ms-transform-style:preserve-3d;
	-o-transform-style:preserve-3d;
	
	z-index:10;
	
}
.overlay{
	/*background-color:#0d2541;*/
	background-color:#000;
	width:71.42%;
	opacity:0;
	display:none;
	position:absolute;
	left:50%;
	margin-left:-35.71%;
	transform:translateZ(5px);
	-webkit-transform: translateZ(5px);
	-moz-transform:translateZ(5px);
	-ms-transform:translateZ(5px);
}
.overlay p{
	width:100%;
	height:20%;
	margin:0 0 0 0;
	color:#fff;
	position:absolute;
	font-size:500%;
	font-family:Interstate;
	text-transform:uppercase;
	color:white;
	filter:blur(5px);
	-webkit-filter:blur(5px);
	-moz-filter:blur(5px);
	-ms-filter:blur(5px);
}
#logo{
	position:absolute;
	width:50%;
	height:20%;
	left:50%;
	top:35%;
	margin-left:-25%;
	font-family:Karnivore;
	font-size:1000%;
	text-align:center;
	color:white;
}
#cross{
	position:absolute;
	background-color:#111;
	top:0%;
	right:0%;
	font-size:300%;
	color:white;
	display:none;
	cursor:pointer;
	transform:translateZ(10px);
	-webkit-transform: translateZ(10px);
	-moz-transform:translateZ(10px) ;
	-ms-transform:translateZ(10px);
}
.widget{
	
	position:absolute;
	text-align:center;
	font-family:Interstate;
	width:320px;
	height:180px;
	margin-left:-160px;
	margin-top:-100%;
	cursor:pointer;
	transition:0.5s ease-out;
	-webkit-transition:0.5s ease-out;
	-moz-transition:0.5s ease-out;
	-ms-transition:0.5s ease-out;
	
		transform-style:preserve-3d;
	-webkit-transform-style:preserve-3d;
	-moz-transform-style:preserve-3d;
	-ms-transform-style:preserve-3d;
	-o-transform-style:preserve-3d;
}

.widget .content-wrapper{
	position:absolute;
	top:0;
	bottom:0;
	left:0;
	right:0;
}

.front{
	position:absolute;
	top:0;
	bottom:0;
	left:0;
	right:0;
	background-color:#fff;
	background-repeat: no-repeat;
	background-size: 100% 100%;
	z-index:20;
}
.back{
	position:absolute;
	top:0;
	bottom:0;
	left:0;
	right:0;
	background-color:#111;
	background-size:100% 100%;
	background-repeat:no-repeat;
	text-align:center;
	color:#fff;
	font-family:"Comic Sans MS", cursive;

}
/*.main .content-wrapper .back::after{
	content:"";
	position:absolute;
	top:0;
	bottom:0;
	left:0;
	right:0;
	background-color:#333;
	opacity:0.6;
	z-index:-1;
}*/
	
.back p{
	margin-top:10%;
	background-color:rgba(50,50,50,0.8);
}
.main{

	left:50%;
	transform:translateZ(-1500px) scale(1);
	-webkit-transform:translateZ(-1500px) scale(1);
	-moz-transform:translateZ(-1500px) scale(1);
	-ms-transform:translateZ(-1500px) scale(1);
}

.front p{
	position: absolute;
	background-color: rgba(0,0,0,0.7);
	margin:0 0 0 0;
	height:30%;
	color:white;
	width: 100%;
	bottom:0;
	font-size: 140%;
}
.sub .front p{
	display:none;}
	
/*layer1 widget alignment*/
#philosophy0, #rates0{
}
#portfolio0, #contact0{
}
#portfolio0, #philosophy0{
	top:140px;
}
#rates0, #contact0{
	bottom:80px;
}

/*css 3d translation*/
.layer2{
	transform:translateZ(-2000px) scale(0.6);
	-webkit-transform:translateZ(-2000px) scale(0.5);
	-moz-transform:translateZ(-2000px) scale(0.6);
	-ms-transform:translateZ(-2000px) scale(0.6);
}
.layer3{
	transform:translateZ(-4000px) scale(0.5);
	-webkit-transform:translateZ(-4000px) scale(0.4);
	-moz-transform:translateZ(-4000px) scale(0.5);
	-ms-transform:translateZ(-4000px) scale(0.5);
}
.layer4{
	transform:translateZ(-6000px) scale(0.4);
	-webkit-transform:translateZ(-6000px) scale(0.3);
	-moz-transform:translateZ(-6000px) scale(0.4);
	-ms-transform:translateZ(-6000px) scale(0.4);
}
.layer2 div::after, .layer3 div::after, .layer4 div::after{
	content:"";
	position:absolute;
	top:0;
	bottom:0;
	left:0;
	right:0;
	background-color:#333;
	opacity:0.2;
}
.layer3 div::after{
	opacity:0.3;
}
.layer4 div::after{
	opacity:0.4;
}
/*hover effect*/
/*.hovered .front::after, .hovered .back::after{
	 content: "";
  background-color:#AA1643;
  opacity: 0.5;
  top: 0;
  left: 0;
  bottom: 0;
  right: 0;
  position: absolute;
}*/
.hovered div::after{
	opacity:0;
}
.hovered div{
/*	-webkit-filter: brightness(1.1);
	-moz-filter: brightness(1.1);
	-ms-filter: brightness(1.1);
	filter: brightness(1.1);
*/

}

.dimmed-layer2{
	transform:scale(0.5) translateZ(-2000px);
	-webkit-transform:scale(0.4) translateZ(-2000px);
	-moz-transform:scale(0.5) translateZ(-2000px);
	-ms-transform:scale(0.5) translateZ(-2000px);
	opacity:0.6;
}

.dimmed-layer3{
	transform:scale(0.4) translateZ(-4000px);
	-webkit-transform:scale(0.3) translateZ(-4000px);
	-moz-transform:scale(0.4) translateZ(-4000px);
	-ms-transform:scale(0.4) translateZ(-4000px);
		opacity:0.6;
}
.dimmed-layer4{
	transform:scale(0.3) translateZ(-6000px);
	-webkit-transform:scale(0.2) translateZ(-6000px);
	-moz-transform:scale(0.3) translateZ(-6000px);
	-ms-transform:scale(0.3) translateZ(-6000px);
		opacity:0.6;
}
.dimmed-main{
	transform:scale(0.9) translateZ(-1500px);
	-webkit-transform:scale(0.9) translateZ(-1500px);
	-moz-transform:scale(0.9) translateZ(-1500px);
	-ms-transform:scale(0.9) translateZ(-1500px);
		opacity:0.6;
}
.dimmed-layer2::after, .dimmed-layer3::after, .dimmed-layer4::after, .dimmed-main::after{
	content:"";
	position:absolute;
	top:0;
	bottom:0;
	left:0;
	right:0;
	background-color:#333;
	opacity:0.6;
}

/*flipping*/

			/* START: Accommodating for IE */
.flip .back {
    -webkit-transform: rotateY(0deg);
    -moz-transform: rotateY(0deg);
    -o-transform: rotateY(0deg);
    -ms-transform: rotateY(0deg);
    transform: rotateY(0deg);
}

.flip .front {
    -webkit-transform: rotateY(180deg);
    -moz-transform: rotateY(180deg);
    -o-transform: rotateY(180deg);
    transform: rotateY(180deg);
}
		
		/* END: Accommodating for IE */

.front, .back {
	-webkit-backface-visibility: hidden;
	-moz-backface-visibility: hidden;
	-ms-backface-visibility: hidden;
	backface-visibility: hidden;

	-webkit-transition: 0.6s;
	-webkit-transform-style: preserve-3d;

	-moz-transition: 0.6s;
	-moz-transform-style: preserve-3d;

	-o-transition: 0.6s;
	-o-transform-style: preserve-3d;

	-ms-transition: 0.6s;
	-ms-transform-style: preserve-3d;

	transition: 0.6s;
	transform-style: preserve-3d;
}

.front {
	-webkit-transform: rotateY(0deg);
	-ms-transform: rotateY(0deg);
	-moz-transform: rotateY(0deg);
	transform: rotateY(0deg);
	/*background-color: lightgreen;*/
}

.back {
	-webkit-transform: rotateY(-180deg);
	-moz-transform: rotateY(-180deg);
	-o-transform: rotateY(-180deg);
	-ms-transform: rotateY(-180deg);
	transform: rotateY(-180deg);
}

/*arrangement classes*/
.active-top-left{
	/*move the left main boxes to center.. current width 20%, gap from center 5%*/
/*	transform:translateX(75%) translateY(100%) translateZ(0px) scale(1.1);
	-webkit-transform:translateX(75%) translateY(100%) translateZ(0px) scale(1.1);
	-moz-transform:translateX(75%) translateY(100%) translateZ(0px) scale(1.1);
	-ms-transform:translateX(75%) translateY(100%) translateZ(0px) scale(1.1);*/
	opacity:0.7;
	z-index:10;
	 /*current height 30%*/
}
.active-bottom-left{
	/*move the left main boxes to center.. current width 20%, gap from center 5%*/
/*	transform:translateX(75%) translateY(-100%) translateZ(0px) scale(1.1);
	-webkit-transform:translateX(75%) translateY(-100%) translateZ(0px) scale(1.1);
	-moz-transform:translateX(75%) translateY(-100%) translateZ(0px) scale(1.1);
	-ms-transform:translateX(75%) translateY(-100%) translateZ(0px) scale(1.1);*/
	opacity:0.7;
	z-index:10;
	 /*current height 30%*/
}
.active-top-right{
	/*move the left main boxes to center.. current width 20%, gap from center 5%*/
/*	transform:translateX(-75%) translateY(100%) translateZ(0px) scale(1.1);
	-webkit-transform:translateX(-75%) translateY(100%) translateZ(0px) scale(1.1);
	-moz-transform:translateX(-75%) translateY(100%) translateZ(0px) scale(1.1);
	-ms-transform:translateX(-75%) translateY(100%) translateZ(0px) scale(1.1);*/
	opacity:0.7;
	z-index:10;
	 /*current height 30%*/
}
.active-bottom-right{
	/*move the left main boxes to center.. current width 20%, gap from center 5%*/
/*	transform:translateX(-75%) translateY(-100%) translateZ(0px) scale(1.1);
	-webkit-transform:translateX(-75%) translateY(-100%) translateZ(0px) scale(1.1);
	-moz-transform:translateX(-75%) translateY(-100%) translateZ(0px) scale(1.1);
	-ms-transform:translateX(-75%) translateY(-100%) translateZ(0px) scale(1.1);*/
	opacity:0.7;
	z-index:10;
	 /*current height 30%*/
}

.active-sub{
		transform:translateZ(10px) scale(0.8);
	-webkit-transform: translateZ(10px) scale(0.8);
	-moz-transform:translateZ(10px) scale(0.8);
	-ms-transform:translateZ(10px) scale(0.8);
}
.viewing{
	transform:translateZ(20px) scale(3);
	-webkit-transform: translateZ(20px) scale(3);
	-moz-transform:translateZ(20px) scale(3);
	-ms-transform:translateZ(20px) scale(3);
	box-shadow: 5px 5px 5px #888888;
}
.inactive-widget{
		position:absolute;
	text-align:center;
	font-family:Interstate;
	width:20%;
	height:30%;
	cursor:pointer;
}
/*footer*/
#footer {
  height: 30px;
  background-color: #333;
  width:100%;
  position: fixed;
  bottom: 0;
  color: #aaa;
  font-family: 'Lato', sans-serif;
  font-size: 0.9em;
}

#footer-left {
  padding-top: 5px;
  padding-left: 10px;
}

#footer-right {
  padding-top: 5px;
  padding-right: 10px;
}

.pull-left {
  float: left;
}

.pull-right {
  float: right;
}

.social-share {
  padding-right: 10px;
}

.social-share a {
  text-decoration: none;
  color: #aaa;
  transition: 0.5s ease-in-out;
  -webkit-transition: 0.5s ease-in-out;
  -moz-transition: 0.5s ease-in-out;
  -o-transition: 0.5s ease-in-out;
  -ms-transition: 0.5s ease-in-out;
}

.social-share a:hover {
  text-decoration: none;
  color: #fff;
}

